Fixed dark mode

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -47,6 +47,6 @@ body {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: @gray-800;
-        color:            white;
+        color:            @white;
     }
 }
