--- a/src/less/table.less
+++ b/src/less/table.less
@@ -30,7 +30,7 @@
  * handled by the general classes, e.g. the handling of filenames.
  */
 
-#list {
+.table {
     /* Filenames and the table headings may link to the relating file or sort
      * the table. However, these links shoul NOT be highlighted. Decorations
      * will be kept enabled for underlineing the link when hovering. */
@@ -53,18 +53,30 @@
         word-break: break-all;
         white-space: normal;
     }
-}
 
-/* If the client prefers a dark color scheme, the following classes will be
- * applied to give the site a dark look and feel.
- *
- * NOTE: These classes need to be at the end of this file, as they override the
- *       default settings previously defined, if the dark color scheme is
- *       requested. */
-@media (prefers-color-scheme: dark) {
-    a,
-    a:hover,
-    a:focus {
-        color: white;
+
+    /* If the client prefers a dark color scheme, the following classes will be
+     * applied to give the site a dark look and feel.
+     *
+     * NOTE: These classes need to be at the end of this file, as they override the
+     *       default settings previously defined, if the dark color scheme is
+     *       requested. */
+    @media (prefers-color-scheme: dark) {
+        color: @white;
+
+        a,
+        a:hover,
+        a:focus {
+            color: @white;
+        }
+
+        i {
+            color: @white;
+        }
+
+        tr,
+        td {
+            color: @white;
+        }
     }
 }
